--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   height: 100vh;
 }
 
@@ -17,7 +17,7 @@ a {
 }
 
 p {
-  line-height: 1.7;
+  line-height: 2;
 }
 
 ul {
@@ -25,7 +25,7 @@ ul {
 }
 
 li {
-  line-height: 2.2;
+  line-height: 2;
 }
 
 h1,
@@ -166,7 +166,7 @@ h3 {
 }
 
 .btn:hover {
-  transform: scale(0.98);
+  background: #222;
 }
 
 .loadingSpinnerContainer {
