--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -191,6 +191,34 @@ h3 {
   animation: spin 1.2s linear infinite;
 }
 
+#pocketwatch.form-button {
+  color: white;
+  background-color: #9DA1FF;
+  border-color: #9DA1FF;
+}
+
+#pocketwatch.form-button:hover {
+  background-color: #8187E2;
+  border-color: #8187E2;
+}
+
+#pocketwatch.form-button:active {
+  background-color: #656EC6;
+  border-color: #656EC6;
+}
+
+a:link {
+  color: #454CEE;
+}
+
+a:visited {
+  color: #001EB5;
+}
+
+a:hover {
+  color: #0735D1;
+}
+
 .task-container {
   border: 1px solid;
   padding: 5px;
