send emails with mailgun

--- a/backend/templates/resetPassword.handlebars
+++ b/backend/templates/resetPassword.handlebars
@@ -5,8 +5,10 @@
     </head>
     <body>
         <p>Hi {{name}},</p>
-        <p>We received a request to reset your password.</p>
-        <p>Click on the following link to reset your password:</p>
+        <p>
+            We received a request to reset your password.
+            Click on the following link to reset your password:
+        </p>
         <a href="https://{{link}}">Reset Password</a>
         <p>If this wasn't you, simply ignore this email.</p>
     </body>
