--- a/backend/templates/verifyEmail.handlebars
+++ b/backend/templates/verifyEmail.handlebars
@@ -5,9 +5,11 @@
     </head>
     <body>
         <p>Hi {{name}},</p>
-        <p>Your email was just added to an account on pocketwatch.page.</p>
-        <p>Click on the following link to verify your email:</p>
-        <a href="https://{{link}}">Reset Password</a>
+        <p>
+            Your email was just added to an account on pocketwatch.page.
+            Click on the following link to verify your email:
+        </p>
+        <a href="https://{{link}}">Verify Email</a>
         <p>If this wasn't you, simply ignore this email.</p>
     </body>
 </html>
