--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,22 @@ a:hover {
   color: #0735D1;
 }
 
+.navbar-brand a {
+  color: #454CEE;
+}
+
+.navbar-brand a:focus, .navbar-brand a:hover {
+  color: #0735D1;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #454CEE;
+}
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  color: #0735D1;
+}
+
 p {
   line-height: 2;
 }
