update timer and todolist

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -309,3 +309,11 @@ h3 {
     margin-right: 15px;
   }
 }
+
+#timer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10vw;
+  color: black;
+}
