--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,19 +23,19 @@ a:hover {
   color: #0735D1;
 }
 
-.navbar-brand a {
+.navbar-brand a, .navbar-brand a:focus {
   color: #454CEE;
 }
 
-.navbar-brand a:focus, .navbar-brand a:hover {
+.navbar-brand a:hover {
   color: #0735D1;
 }
 
-.navbar-light .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link, .navbar-light .navbar-nav .nav-link:focus {
   color: #454CEE;
 }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:hover {
   color: #0735D1;
 }
 
