Remove unnecessary "https" from email link

--- a/backend/templates/resetPassword.handlebars
+++ b/backend/templates/resetPassword.handlebars
@@ -9,7 +9,7 @@
             We received a request to reset your password.
             Click on the following link to reset your password:
         </p>
-        <a href="https://{{link}}">Reset Password</a>
+        <a href="{{link}}">Reset Password</a>
         <p>If this wasn't you, simply ignore this email.</p>
     </body>
 </html>
