--- a/backend/templates/verifyEmail.handlebars
+++ b/backend/templates/verifyEmail.handlebars
@@ -9,7 +9,7 @@
             Your email was just added to an account on pocketwatch.page.
             Click on the following link to verify your email:
         </p>
-        <a href="https://{{link}}">Verify Email</a>
+        <a href="{{link}}">Verify Email</a>
         <p>If this wasn't you, simply ignore this email.</p>
     </body>
 </html>
