--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -315,9 +315,10 @@ h3 {
 }
 
 #timer{
-  display: flex;
+  display: inline-block;
+  position: relative;
   align-items: center;
   justify-content: center;
-  font-size: 10vw;
+  font-size: 8vw;
   color: black;
 }
